# flake-parts-graph

./: .gitignore  LICENSE  README.md  flake.nix  fpg.py  main.py  nixoscope.py  pyproject.toml
nixoscope/: module_graph.py  nixoscope.py  visualizer.py
tests/: test_module_graph.py  test_module_graph_edge.py
