[project]
name = "nixoscope"
version = "0.1.0"
description = "Visualize dependencies between NixOS modules"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "graphviz>=0.21",
]

[project.scripts]
nixoscope = "nixoscope.nixoscope:main"

[tool.ruff]
# Set the maximum line length to 120
line-length = 120

# Enable specific rule sets
select = [ "ALL" ]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by line-length)
    "PT009",
    "T201"
]

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, rather than tabs
indent-style = "space"
